--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
 
+  <img class="mobile-img" src="./assets/images/image-omelette.jpeg" alt="img">
+
     <div class="main">
 
-      <img src="./assets/images/image-omelette.jpeg" alt="img">
+      <img class="desc-img" src="./assets/images/image-omelette.jpeg" alt="img">
 
       <h1 class="head">Simple Omelette Recipe</h1>
 
@@ -29,7 +31,7 @@
       </div>
 
       <h1>Ingredients</h1>
-      <ul>
+      <ul class="lists">
         <li>2-3 large eggs</li>
         <li>Salt, to taste</li>
         <li>Pepper, to taste</li>
@@ -40,7 +42,7 @@
       <hr>
 
       <h1>Instructions</h1>
-      <ol>
+      <ol class="lists">
         <li><strong>Beat the eggs:</strong>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
         <li><strong>Heat the pan:</strong>Place a non-stick frying pan over medium heat and add butter or oil.</li>
         <li><strong>Cook the omelette:</strong>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
@@ -52,30 +54,35 @@
       <hr>
 
       <h1>Nutrition</h1>
+      <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-      <table>
+      <table style="width: 100%;">
+        
         <thead>
-          <tr>
-            <th>The table below shows nutritional values per serving without the additional fillings.</th>
+          <tr style="border: none;">
+
+            <th></th>
+            <th></th>
+
           </tr>
         </thead>
-
         <tbody>
+
           <tr>
             <td>calories</td>
-            <td>277kcal</td>
+            <td style="color: #6C4238; font-weight: 600; padding-left: 0;">277kcal</td>
           </tr>
           <tr>
             <td>carbs</td>
-            <td>0g</td>
+            <td style="color: #6C4238; font-weight: 600; padding-left: 0;">0g</td>
           </tr>
           <tr>
             <td>Protein</td>
-            <td>20g</td>
+            <td style="color: #6C4238; font-weight: 600; padding-left: 0;">20g</td>
           </tr>
-          <tr>
+          <tr class="last-row">
             <td>Fat</td>
-            <td>22g</td>
+            <td style="color: #6C4238; font-weight: 600; padding-left: 0;">22g</td>
           </tr>
         </tbody>
       </table>
